--- a/index.html
+++ b/index.html
@@ -23,21 +23,25 @@
             gap: 2rem;
             flex-wrap: wrap;
             background: linear-gradient(145deg,
-                    #F0D670 20%,
-                    #000 40%,
-                    #BB891A 70.86%);
-        }
-
-        .ui-wrapper {
-            border: 1px solid #ccc;
-            border-radius: 8px;
-            background: #fff;
-            margin-bottom: 25px;
-            padding: 15px;
-            box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
-            width: 30vw;
+    #F0D670 20%,
+    rgba(0, 0, 0, 0.6) 40%, /* black transparent */
+    #BB891A 70.86%);
 
         }
+
+       .ui-wrapper {
+    border: 1px solid rgba(255, 255, 255, 0.3); 
+    border-radius: 12px;
+    background: rgba(255, 255, 255, 0.05); 
+    backdrop-filter: blur(12px); 
+    -webkit-backdrop-filter: blur(12px); 
+    margin-bottom: 25px;
+    padding: 15px;
+    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2), 
+                inset 0 2px 8px rgba(255, 255, 255, 0.1); 
+    width: 30vw;
+}
+
 
         .ui-preview {
             border: 1px solid #ddd;
@@ -258,31 +262,6 @@
             display: flex;
             justify-content: center;
             align-items: center;
-}
-
-.ran_button::before {
-  position: absolute;
-  content: attr(data-tooltip);
-  width: var(--tooltip-width);
-  height: var(--tooltip-height);
-  background-color: var(--tooltip-color);
-  font-size: 0.9rem;
-  color: #111;
-  border-radius: .25em;
-  line-height: var(--tooltip-height);
-  bottom: calc(var(--height) + var(--gap-between-tooltip-to-button) + 10px);
-  left: calc(50% - var(--tooltip-width) / 2);
-}
-
-.ran_button::after {
-  position: absolute;
-  content: '';
-  width: 0;
-  height: 0;
-  border: 10px solid transparent;
-  border-top-color: var(--tooltip-color);
-  left: calc(50% - 10px);
-  bottom: calc(100% + var(--gap-between-tooltip-to-button) - 10px);
 }
 
 .ran_button::after,.button::before {
@@ -1546,7 +1525,7 @@
     clip-path: polygon(40% 0%, 70% 0%,
                     50% 40%, 80% 40%,
                     30% 100%, 60% 60%,20% 60%);
-    background: linear-gradient(180deg, #F0D670 0%, #BB891A 70.86%);
+    background: linear-gradient(180deg, #000 0%, #BB891A 70.86%);
     box-shadow: -4px -4px 10px #3C3C3C, 5px 5px 5px #111;
     color: #fff;
     font-weight: bold;
@@ -1628,7 +1607,6 @@
   height: 36px;
   width: 120px;
   border: none;
-  background: #5e41de33;
   border-radius: 20px;
   cursor: pointer;
   margin-top:14%;
@@ -2425,7 +2403,7 @@
   height: 45px;
   cursor: pointer;
   position: relative;
-  border: 1px solid #dd7d00;
+  border: 1px solid #fff;
   background: transparent;
   margin-top:10%;
 }
